buildscript {
    repositories {
        mavenCentral()
        maven {
            name = "forge"
            url = "http://files.minecraftforge.net/maven"
        }
    }

    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
    }
}
apply plugin: 'java'
apply plugin: 'net.minecraftforge.gradle.tweaker-client'

version '1.0'
group 'me.zero.api'

sourceCompatibility = targetCompatibility = '1.8'
compileJava {
    sourceCompatibility = targetCompatibility = '1.8'
}

minecraft {
    version = '1.11.2'
    runDir = 'run'
    tweakClass = 'me.zero.client.load.tweak.ClientTweaker'
    mappings = 'snapshot_20170215'

    makeObfSourceJar = true
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.javassist', name: 'javassist', version: '3.22.0-CR1'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
    compile group: 'org.reflections', name: 'reflections', version: '0.9.10'
    compile group: 'net.jodah', name: 'typetools', version: '0.4.8'
}

task "create-dirs" << {
    sourceSets*.java.srcDirs*.each { it.mkdirs() }
    sourceSets*.resources.srcDirs*.each { it.mkdirs() }
}
